<resources>
    <string name="app_name" translatable="false">Wallet</string>
    <string name="name">JackLeeMing</string>
    <string name="complexString"><b>我爱你</b>哈哈<i>是你的</i>.<u>什么?</u></string>
    <string name="complexStr">&lt;b>Stop&lt;/b>.%1$d.</string>
    <string name="button">Button</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">@android:string/cancel</string>
    <plurals name="plurals">
        <item quantity="one">one unicorn</item>
        <item quantity="other">%d unicorn</item>
        <item quantity="zero">Zero</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_str">GitHub
        是一个面向开源及私有软件项目的托管平台 http://www.baidu.com ，因为只支持 Git 作为唯一的版本库格式进行托管，
        故名 GitHub。GitHub 于 2008 年 4 月 10 日正式 18310397518 上线 ljk19901@gmail.com，除了 Git 代码仓库托管及基本的 Web
        管理界面以外，还提供了订阅、讨论组、文本渲染、在线文件编辑器、协作图谱（报表）、
        代码片段分享（Gist）等&#8230;</string>

    <string name="compassView_cardinal_north">N</string>
    <string name="compassView_cardinal_east">E</string>
    <string name="compassView_cardinal_south">S</string>
    <string name="compassView_cardinal_west">W</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="msg_net_off">未连接上网络</string>

    <string name="btn_start1">开始1</string>
    <string name="btn_start2">开始2</string>
    <string name="btn_start3">开始3</string>
    <string name="btn_start4">开始4-close</string>


</resources>
