<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="work.android.smartbow.com.wallet.Main3Activity">

    <Button
        android:id="@+id/btn_retrofit1"
        android:layout_width="match_parent"
        android:text="@string/btn_start1"
        android:layout_height="wrap_content"/>

    <Button
    android:id="@+id/btn_retrofit2"
    android:layout_width="match_parent"
    android:text="@string/btn_start2"
    android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_retrofit3"
        android:layout_width="match_parent"
        android:text="@string/btn_start3"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_retrofit4"
        android:layout_width="match_parent"
        android:text="@string/btn_start4"
        android:layout_height="wrap_content"/>
      <fragment
          android:id="@+id/fragmentSam"
          android:layout_width="match_parent"
          android:name="work.android.smartbow.com.wallet.fragment.FragSm"
          android:layout_height="match_parent"/>
</LinearLayout>
